Fix: plausible, footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,6 +7,11 @@
         <span>&copy; {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ site.Title }}</a></span>
         {{- end }}
     {{- end }}
+
+    {{- with site.Params.footer.text }}
+        {{ . | markdownify }}
+        {{- print " · "}}
+    {{- end }}
 </footer>
 {{- end }}
 
